commit d3d2506 を cherry pick で取り込もう思ったけど，うまく行かなかったんで自力で対応した。  → JaCoCoの使い方を，より元のやり方っぽくしてみた。 でも，うまく動いている気がしない...。:-(